fixed alignment of mobilemenu and remove get in touch

--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -16,7 +16,7 @@
 	&__textContent{
 		position: absolute;
 		color:rgba(255,255,255,.9);
-		top:50%;
+		top:46%;
 		transform: translateY(-50%);
 		left:0;
 		width:100%;
